tests/compile_fail/display/unknown_attribute.stderr
error: expected one of: string literal, `rename_all`, `bounds`, `bound`, `where`
 --> tests/compile_fail/display/unknown_attribute.rs:3:11
  |
3 | #[display(unknown = "unknown")]
  |           ^^^^^^^
